# temtemapi

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  pylintrc  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: python.yml  temtemapi.yml
outputs/: items.json  techniques.json  temtems.json  traits.json
temapi/: __main__.py  extractor.py  extractors.py  fetcher.py  models.py
temapi/api/: __init__.py  models.py
temapi/api/loaders/: __init__.py  items.py  loader.py  techniques.py  temtems.py  traits.py  utils.py
temapi/api/routes/: __init__.py  items.py  techniques.py  temtems.py  traits.py
temapi/commons/: models.py  paths.py
temapi/extractor/: __init__.py  extractors.py  fetcher.py
tests/: test_temapi.py
