[tool.poetry]
name = "temapi"
version = "0.1.0"
description = ""
authors = ["Joao Vitor Maia <joaocampo2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
parsel = "^1.5.2"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"
w3lib = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"

[tool.poetry.scripts]
extract = "temapi.extractor:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
