[tool.poetry]
name = "temapi"
version = "0.1.0"
description = ""
authors = ["Joao Vitor Maia <joaocampo2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
parsel = "^1.5.2"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"
w3lib = "^1.21.0"
pydantic = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"
black = "^19.10b0"
invoke = "^1.4.1"
pylint = "^2.4.4"
pylint-quotes = "^0.2.1"
flake8 = "^3.7.9"

[tool.poetry.scripts]
extract = "temapi.extractor:main"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
